# Navi

./: README.md
WebTrack/: app.py
WebTrack/examples/: plan-route-according-to-name.html
WebTrack/notforflask/: extract_steps_paths.py
WebTrack/saves/: current_route.txt  route_2025-05-11T12-40-29-432Z.json  route_2025-05-11T13-48-43-951Z.json  steps_2025-05-11T12-40-29-432Z.json  steps_2025-05-11T13-48-43-951Z.json
WebTrack/scripts/: mqtt_listener.py  steps_publisher.py
WebTrack/static/css/: styles.css
WebTrack/static/js/: script.js
WebTrack/templates/: map.html
gpuimu_con1/ros_ws/: mqtt.sh  run.sh  test.sh
gpuimu_con1/ros_ws/src/gps_imu_mqtt/: CMakeLists.txt  package.xml  setup.cfg  setup.py
gpuimu_con1/ros_ws/src/gps_imu_mqtt/launch/: mqtt.launch.py
gpuimu_con1/ros_ws/src/gps_imu_mqtt/src/gps_imu_mqtt/: mqtt_node.py
gpuimu_con1/ros_ws/src/gps_imu_msgs/: CMakeLists.txt  package.xml
gpuimu_con1/ros_ws/src/gps_imu_msgs/msg/: GpsImuData.msg  GpsImuDatas.msg
gpuimu_con1/ros_ws/src/gps_imu_publisher/: CMakeLists.txt  package.xml  setup.py
gpuimu_con1/ros_ws/src/gps_imu_publisher/launch/: gps_imu.launch.py
gpuimu_con1/ros_ws/src/gps_imu_publisher/src/gps_imu_publisher/: gps_imu_node.py
motion_container1/ros2_ws/: follower.sh  run.sh  test.sh
motion_container1/ros2_ws/src/extract_step/: CMakeLists.txt  package.xml  setup.cfg  setup.py
motion_container1/ros2_ws/src/extract_step/launch/: extract.launch.py
motion_container1/ros2_ws/src/extract_step/src/extract_step/: extract_step_node.py  steps_receiver.py  tripstatus_mqtt.py
motion_container1/ros2_ws/src/extract_step/steps/: steps_2025-05-11T02-07-17-378Z.json
motion_container1/ros2_ws/src/extract_step_msgs/: CMakeLists.txt  package.xml
motion_container1/ros2_ws/src/extract_step_msgs/msg/: VehicleCommand.msg  VehicleCommands.msg
motion_container1/ros2_ws/src/path_follower/: CMakeLists.txt  package.xml  setup.cfg  setup.py
motion_container1/ros2_ws/src/path_follower/launch/: path_follower.launch.py
motion_container1/ros2_ws/src/path_follower/scripts/: steps_receiver.py
motion_container1/ros2_ws/src/path_follower/src/path_follower/: motion_controller.py  path_follower_node.py
ros_projects/: allinone.sh  com.txt
ros_projects/docker/不是基于L4T的docker/: Dockerfile
ros_projects/docker/基于L4T-Tensorrt但是没有nvcc/: Dockerfile
ros_projects/docker/基于L4T-Tensorrt有nvcc/: Dockerfile
ros_projects/gps_imu/: Dockerfile  run_container.sh
ros_projects/gps_imu/ros2_ws/: GPS.py  create_endevice.py  create_service.py  create_track.py  download_track.py  imu_usb.py  upload_track.py
ros_projects/motion/: Dockerfile  build_image.sh  run_container.sh
ros_projects/motion/ros2_ws/: run.sh
ros_projects/motion/ros2_ws/src/motion/: CMakeLists.txt
ros_projects/motion/ros2_ws/src/motion/launch/: tracking.launch.py
ros_projects/motion/ros2_ws/src/motion/src/motion/: motion.py
ros_projects/motion/ros2_ws/src/motion_msgs/: CMakeLists.txt
ros_projects/motion/ros2_ws/src/motion_msgs/msg/: DetectedObject.msg
ros_projects/yolov5_vehicle_detector/: Dockerfile  build_image.sh  run_container.sh
ros_projects/yolov5_vehicle_detector/ros2_ws/resources/yolov5-sort/yolov5-sort/: test.py  v5_sort_video.py
ros_projects/yolov5_vehicle_detector/ros2_ws/resources/yolov5-sort/yolov5-sort/sort_tracker/: sort.py
ros_projects/yolov5_vehicle_detector/ros2_ws/src/yolov5_vehicle_detector/: setup.cfg  setup.py
ros_projects/yolov5_vehicle_detector/ros2_ws/src/yolov5_vehicle_detector_msgs/: package.xml
yolov5_container2/ros2_ws/: only build.sh  tcp_sender.sh  test.sh  udp_sender.sh
yolov5_container2/ros2_ws/src/tcp_sender/: CMakeLists.txt  package.xml  setup.cfg  setup.py
yolov5_container2/ros2_ws/src/tcp_sender/launch/: tcp_sender.launch.py
yolov5_container2/ros2_ws/src/tcp_sender/src/tcp_sender/: tcp_sender_node.py
yolov5_container2/ros2_ws/src/udp_sender/: CMakeLists.txt  package.xml  setup.cfg  setup.py
yolov5_container2/ros2_ws/src/udp_sender/launch/: udp_sender.launch.py
yolov5_container2/ros2_ws/src/udp_sender/src/udp_sender/: udp_sender_node.py
yolov5_container2/ros2_ws/src/yolov5_vehicle_detector/: package.xml
yolov5_container2/ros2_ws/src/yolov5_vehicle_detector/src/yolov5_vehicle_detector/: yolov5_tracker_node.py
yolov5_container2/ros2_ws/src/yolov5_vehicle_detector_msgs/msg/: DetectedObject.msg
